RESOLVED FIXED188894
[Cocoa] First scroll gesture in pinned, non-rubber-banding WKWebView may fail to initiate back/forward swipe
https://bugs.webkit.org/show_bug.cgi?id=188894
Summary [Cocoa] First scroll gesture in pinned, non-rubber-banding WKWebView may fail...
mitz
Reported 2018-08-23 11:33:28 PDT
Sometimes the first swipe gesture in a WKWebView would fail to initiate a back/forward swipe despite the view being pinned to the edge and non-rubber-banding. This happens because of a race condition in EventDispatcher::wheelEvent, where setting the rubber-band state is dispatched to the scrolling thread, whereas querying the rubber-banding state happens immediately right after that on the event dispatcher thread, under tryToHandleWheelEvent().
Attachments
Set the rubber-band state from the event dispatcher thread (2.16 KB, patch)
2018-08-23 11:42 PDT, mitz
thorton: review+
mitz
Comment 1 2018-08-23 11:38:42 PDT
mitz
Comment 2 2018-08-23 11:42:37 PDT
Created attachment 347941 [details] Set the rubber-band state from the event dispatcher thread
mitz
Comment 3 2018-08-23 12:51:40 PDT
Note You need to log in before you can comment on or make changes to this bug.