[Cocoa] First scroll gesture in pinned, non-rubber-banding WKWebView may fail to initiate back/forward swipe https://bugs.webkit.org/show_bug.cgi?id=188894 <rdar://problem/43651434>

Reviewed by Tim Horton.

* WebProcess/WebPage/EventDispatcher.cpp:
(WebKit::EventDispatcher::wheelEvent): Set the rubber-band state on the ScrollingTree
  synchronously rather than dispatching doing that to the scrolling thread. This is safe to
  do because ScrollingTree synchrnoizes access to the rubber-band state with an internal
  mutex.



Canonical link: https://commits.webkit.org/203942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235236 268f45cc-cd09-0410-ab3c-d52691b4dbfc